--- a/contact.html
+++ b/contact.html
@@ -114,7 +114,7 @@
                                         </div>
                                         <div>
                                             <h4>Address</h4>
-                                            <p class="mb-0">123 Street New York.USA</p>
+                                            <p class="mb-0">707,Sumana hospital line,Kukatpally, Hyderbad</p>
                                         </div>
                                     </div>
                                 </div>
@@ -125,7 +125,8 @@
                                         </div>
                                         <div>
                                             <h4>Mail Us</h4>
-                                            <p class="mb-0">info@example.com</p>
+                                            <p class="mb-0">asuryakiran123@gmail.com</p>
+                                            <p class="mb-0">suryanumalasetty@gmail.com</p>
                                         </div>
                                     </div>
                                 </div>
@@ -136,7 +137,7 @@
                                         </div>
                                         <div>
                                             <h4>Telephone</h4>
-                                            <p class="mb-0">(+012) 3456 7890</p>
+                                            <p class="mb-0">(+91) 88977 45384</p>
                                         </div>
                                     </div>
                                 </div>
@@ -146,8 +147,8 @@
                                             <i class="fab fa-firefox-browser fa-2x"></i>
                                         </div>
                                         <div>
-                                            <h4>Yoursite@ex.com</h4>
-                                            <p class="mb-0">(+012) 3456 7890</p>
+                                            <h4>suryanum@in.com</h4>
+                                            <p class="mb-0">(+91) 8897745384</p>
                                         </div>
                                     </div>
                                 </div>
@@ -165,7 +166,7 @@
                     <div class="col-xl-6 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="bg-light p-5 rounded h-100">
                             <h4 class="text-primary mb-4">Send Your Message</h4>
-                            <form>
+                            <form action="https://formsubmit.co/20kq1a0541@pace.ac.in" method="POST">
                                 <div class="row g-4">
                                     <div class="col-lg-12 col-xl-6">
                                         <div class="form-floating">
