copy right changes

--- a/attraction.html
+++ b/attraction.html
@@ -215,7 +215,7 @@
                         <span class="text-body"><a href="#" class="border-bottom text-white"><i class="fas fa-copyright text-light me-2"></i>Surya</a>, All right reserved.</span>
                     </div>
                     <div class="col-md-6 text-center text-md-end text-body">
-                        Designed By <a class="border-bottom text-white" href="https://github.com/Surya-Anumalasetty/">Surya-Anumalasetty</a>
+                        Designed By <a class="border-bottom text-white" href="https://github.com/Surya-Anumalasetty/Waterfall_Project">Surya-Anumalasetty</a>
                     </div>
                 </div>
             </div>
