--- a/testimonial.html
+++ b/testimonial.html
@@ -111,13 +111,13 @@
                         </p>
                         <div class="testimonial-inner">
                             <div class="testimonial-img">
-                                <img src="img/testimonial-1.jpg" class="img-fluid" alt="Image">
+                                <img src="img/Surya.jpg" class="img-fluid" alt="Image">
                                 <div class="testimonial-quote btn-lg-square rounded-circle"><i class="fa fa-quote-right fa-2x"></i>
                                 </div>
                             </div>
                             <div class="ms-4">
-                                <h4>Person Name</h4>
-                                <p class="text-start text-white">Profession</p>
+                                <h4>Surya_Anumalasetty</h4>
+                                <p class="text-start text-white">Software Developer</p>
                                 <div class="d-flex text-primary">
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
@@ -133,13 +133,13 @@
                         </p>
                         <div class="testimonial-inner">
                             <div class="testimonial-img">
-                                <img src="img/testimonial-2.jpg" class="img-fluid" alt="Image">
+                                <img src="img/sashank.jpg" class="img-fluid" alt="Image">
                                 <div class="testimonial-quote btn-lg-square rounded-circle"><i class="fa fa-quote-right fa-2x"></i>
                                 </div>
                             </div>
                             <div class="ms-4">
-                                <h4>Person Name</h4>
-                                <p class="text-start text-white">Profession</p>
+                                <h4>Sashank</h4>
+                                <p class="text-start text-white">Software Developer</p>
                                 <div class="d-flex text-primary">
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
@@ -155,19 +155,19 @@
                         </p>
                         <div class="testimonial-inner">
                             <div class="testimonial-img">
-                                <img src="img/testimonial-3.jpg" class="img-fluid" alt="Image">
+                                <img src="img/Nikhil.jpg" class="img-fluid" alt="Image">
                                 <div class="testimonial-quote btn-lg-square rounded-circle"><i class="fa fa-quote-right fa-2x"></i>
                                 </div>
                             </div>
                             <div class="ms-4">
-                                <h4>Person Name</h4>
-                                <p class="text-start text-white">Profession</p>
+                                <h4>Nikhil_Somaraju</h4>
+                                <p class="text-start text-white">Amazon_Develoer</p>
                                 <div class="d-flex text-primary">
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
-                                    <i class="fas fa-star text-white"></i>
+                                    <i class="fas fa-star"></i>
                                 </div>
                             </div>
                         </div>
