--- a/contact.html
+++ b/contact.html
@@ -104,7 +104,7 @@
                         <div>
                             <div class="pb-5">
                                 <h4 class="text-primary">Get in Touch</h4>
-                                <p class="mb-0">The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a class="text-primary fw-bold" href="https://htmlcodex.com/contact-form">Download Now</a>.</p>
+                                <p class="mb-0">The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done.
                             </div>
                             <div class="row g-4">
                                 <div class="col-lg-6">
